Some Bugs Fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../img/lipsum-logo.png" type="image/x-icon">
+    <link rel="icon" href="./img/lipsum-logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
     <script src="./script.js"></script>
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="navbar">
-            <img src="../img/lipsum.png" alt="lipsum-logo1">
+            <img src="./img/lipsum.png" alt="lipsum-logo1">
             <nav>
                 <i id="burger-menu" class="fa fa-bars"></i>
                 <ul>
